--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "private": true,
-  "type": "module",
-  "devDependencies": {
-    "vite": "^5.4.19",
-    "vite-plugin-ruby": "^5.1.1"
+  "name": "wonderful_post_app",
+  "packageManager": "yarn@4.9.2",
+  "dependencies": {
+    "bootstrap": "^5.3.7",
+    "sass": "^1.90.0",
+    "vite": "^7.1.3"
   }
 }
