--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "bootstrap": "^5.3.7",
     "sass": "^1.90.0",
     "vite": "^7.1.3"
-  }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
 }
