--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,11 @@ jobs:
         with:
           node-version: '20.19.0'
 
-      - name: Enable Corepack (Yarn 4)
+      - name: Enable Corepack and set Yarn 4.9.2
         run: |
           corepack enable
           corepack prepare yarn@4.9.2 --activate
+          yarn -v
 
       - name: Get Yarn cache dir
         id: yarn-cache-dir
