--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,28 +34,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node (for Vite)
+      - name: Set up Node.js (for Vite)
         uses: actions/setup-node@v4
         with:
           node-version: '20.19.0'
+          cache: 'yarn' # ← キャッシュを Yarn 用に設定
 
       - name: Enable Corepack and set Yarn 4.9.2
         run: |
           corepack enable
           corepack prepare yarn@4.9.2 --activate
           yarn -v
-
-      - name: Get Yarn cache dir
-        id: yarn-cache-dir
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-
-      - name: Cache Yarn dependencies
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.yarn-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
 
       - name: Install JS deps (Yarn)
         run: yarn install --immutable
