--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,13 +38,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.19.0'
-          cache: 'yarn' # ← キャッシュを Yarn 用に設定
+          cache: 'yarn'
 
       - name: Enable Corepack and set Yarn 4.9.2
         run: |
           corepack enable
           corepack prepare yarn@4.9.2 --activate
-          yarn -v
+          yarn -v   # ← ここで Yarn 4.9.2 になっていることを確認できる
 
       - name: Install JS deps (Yarn)
         run: yarn install --immutable
