--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "sass": "^1.90.0",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vue": "^3.5.20"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^6.0.1"
   }
 }
