--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,20 @@ jobs:
           ruby-version: '3.4.3'
           bundler-cache: true
 
-      - name: RuboCop
+      - name: Run RuboCop
         run: bundle exec rubocop -c .rubocop.yml -f github
 
   brakeman:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4.3'
           bundler-cache: true
-      - name: Brakeman
+
+      - name: Run Brakeman
         run: bundle exec brakeman --no-pager
 
   scan_js:
@@ -34,20 +36,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js (for Vite)
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.19.0'
           cache: 'yarn'
 
-      - name: Enable Corepack and set Yarn 4.9.2
+      - name: Enable Corepack and prepare Yarn
         run: |
           corepack enable
           corepack prepare yarn@4.9.2 --activate
-          yarn -v   # ← ここで Yarn 4.9.2 になっていることを確認できる
 
-      - name: Install JS deps (Yarn)
+      - name: Show Yarn version
+        run: yarn -v
+
+      - name: Install JavaScript dependencies
         run: yarn install --immutable
 
-      - name: Build assets (Vite)
+      - name: Build assets with Vite
         run: yarn build
