--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "wonderful_post_app",
   "packageManager": "yarn@4.9.2",
   "dependencies": {
+    "@hotwired/turbo-rails": "^8.0.16",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.7",
     "sass": "^1.90.0",
     "vite": "^7.1.3",
@@ -13,6 +15,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vite-plugin-ruby": "^5.1.1"
   }
 }
