--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,10 @@
-# config/database.yml
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: root
-  host: 127.0.0.1
-  port: 5432
+  host: localhost
+  username: takegaharakose
+  password:
+  pool: 5
 
 development:
   <<: *default
@@ -15,8 +13,3 @@ development:
 test:
   <<: *default
   database: wonderful_post_app_test
-
-production:
-  <<: *default
-  database: wonderful_post_app_production
-  password: <%= ENV["WONDERFUL_POST_APP_DATABASE_PASSWORD"] %>
