--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4.3'
-          bundler-cache: true
 
       - name: Run RuboCop
         run: bundle exec rubocop -c .rubocop.yml -f github
@@ -26,7 +25,6 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4.3'
-          bundler-cache: true
 
       - name: Run Brakeman
         run: bundle exec brakeman --no-pager
@@ -36,12 +34,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js with Corepack
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.19.0'
           cache: 'yarn'
-          corepack: true  # Corepack を有効化
 
       - name: Enable and activate Yarn 4
         run: |
